<resources>
    <!-- app name -->
    <string name="app_name">My Application</string>

    <!-- profile screens -->
    <string name="title_myProfile">Settings</string>
    <string name="name_myProfile">Lucile Alvarado</string>
    <string name="job_myProfile">Graphic designer</string>
    <string name="home_address">5295 Gaylord Walks Apk. 110</string>
    <string name="view_contact_button">View my contacts</string>
    <string name="edit_button">Edit profile</string>
    <string name="text_logOut">Log out</string>
    <string name="text_title_profile">Profile</string>
    <string name="text_button_message">Message</string>

    <!-- authentication screen -->
    <string name="label_lets_get">Let\'s get acquainted</string>
    <string name="label_bottom_title">Fill out the profile and go to the application!</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="signUp_or">or</string>
    <string name="text_register">register</string>
    <string name="text_terms">By clicking Register you agree to our Terms and Conditions</string>
    <string name="text_question">Already have an account?</string>
    <string name="text_signIn">Sign in</string>
    <string name="error_email">Incorrect. Check syntax</string>
    <string name="error_password">Unreliable password.Use upper and lower case, digits</string>
    <string name="button_google" translatable="false">Google</string>

    <!-- My contacts screen -->
    <string name="text_contacts" >Contacts</string>
    <string name="add_contacts" >Add contacts</string>
    <string name="snackbar_removed" >Removed!</string>
    <string name="snackbar_undo" >Undo</string>

    <!-- Add contact dialog -->
    <string name="add_contact">Add contact</string>
    <string name="label_username">Username</string>
    <string name="label_career">Career</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Address</string>
    <string name="label_birth">Date of birth</string>
    <string name="save">Save</string>
    <string name="hint_email" translatable="false">name@gmail.com</string>
    <string name="hint_number" translatable="false">(264)-654-3762</string>
    <string name="hint_username" translatable="false">Pavlo Kokhanevych</string>
    <string name="hint_career" translatable="false">Android Developer</string>

    <!-- Transaction -->
    <string name="transaction_photo_item" translatable="false">photoItem</string>
    <string name="transaction_photo_profile" translatable="false">photoProfile</string>

    <!-- ViewPager fragment. Names of fragments  -->
    <string name="profile_screen">Profile</string>
    <string name="my_contacts_screen">Contacts</string>

    <!-- Exceptions -->
    <string name="unknown_fragment" translatable="false">Unknown fragment!</string>

</resources>