<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/photoProfile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/profileBlue"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonLogOut"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:text="@string/title_myProfile"
        android:textColor="@color/profileTitle"
        android:textSize="@dimen/size_title_text"
        app:fontFamily="@font/opensans_semibold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_logOut"
        android:textColor="@color/textJob"
        android:textSize="@dimen/size_name_text"
        android:fontFamily="@font/opensans_semibold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/title"
        android:layout_marginEnd="@dimen/normal_margin"
        android:paddingStart="@dimen/large_padding"
        android:paddingEnd="@dimen/large_padding"
        app:cornerRadius="@dimen/small_margin"
        app:strokeColor="@color/textJob"
        android:backgroundTint="@color/colorAccent"
        app:strokeWidth="@dimen/stroke_width"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/margin_top_title"
        android:layout_height="@dimen/photo_size_height"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogOut"
        app:shapeAppearanceOverlay="@style/circular" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_myProfile"
        android:textColor="@color/profileTitle"
        android:textSize="@dimen/size_name_text"
        app:fontFamily="@font/opensans_semibold"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textCareer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_myProfile"
        android:textColor="@color/textJob"
        android:textSize="@dimen/size_job_text"
        app:fontFamily="@font/opensans_semibold"
        app:layout_constraintTop_toBottomOf="@id/textName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_address"
        android:textColor="@color/textJob"
        android:textSize="@dimen/size_job_text"
        app:fontFamily="@font/opensans_semibold"
        app:layout_constraintTop_toBottomOf="@id/textCareer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/normal_margin"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/buttonImageFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="@dimen/largest_margin"
        app:layout_constraintEnd_toStartOf="@id/buttonImageIn"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/buttonImageIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_in"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        app:layout_constraintEnd_toStartOf="@id/buttonImageInst"
        app:layout_constraintStart_toEndOf="@id/buttonImageFacebook"
        app:layout_constraintTop_toTopOf="@id/buttonImageFacebook"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonImageInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_inst"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonImageIn"
        app:layout_constraintTop_toTopOf="@id/buttonImageFacebook"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/textEditButton"
        android:textSize="@dimen/size_job_text"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonViewContact"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/small_margin"
        app:strokeColor="@color/profileBlue"
        app:strokeWidth="@dimen/stroke_width"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonViewContact"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/view_contact_button"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/white"
        android:background="@drawable/bc_view_my_contacts"
        android:textSize="@dimen/size_register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"

        />


</androidx.constraintlayout.widget.ConstraintLayout>